IBP/HDP interface

--- a/src/TODO
+++ b/src/TODO
@@ -3,6 +3,7 @@
 ### Propriété:
     * homophily (ya t'il homophilie par attaachement préférentiel)
     * attachement préférentiel par homopholie (nouveux liens / nouveaux noeud?) 
+    * CHECK generative model (typically LDA) if it has or not Zipf LAW !!!! Like said but with no proove !
 
 ##### communauté
 * equivalence struturelle (economie / partenariat)
