repeat and io factorization

--- a/src/TODO
+++ b/src/TODO
@@ -6,6 +6,8 @@
 #
 # use args...https://github.com/kennethreitz/args
 #
+# @Debug: clique and an random generator tree path. Working ?
+#
 #
 
 ### Propriété:
