--- a/src/TODO
+++ b/src/TODO
@@ -1,10 +1,9 @@
 ### Structure Tree
-# Make the modelbase and dataBase inherit from a serialisble class (pickle ?)
-# no....
 # Manage the i/o coherence instead. 
 # How should be the backende to make big scale learning with database and search engine interface...
+#   * Spark/Hadoop interface... (hdfs = htable)
 #
-# use args...https://github.com/kennethreitz/args
+# use args...https://github.com/kennethreitz/args instead parser for fit.py
 #
 # @Debug: clique and an random generator tree path. Working ?
 #
