--- a/src/TODO
+++ b/src/TODO
@@ -5,11 +5,14 @@
 #
 # use args...https://github.com/kennethreitz/args instead parser for fit.py
 #
-# @Debug: clique and an random generator tree path. Working ?
+# @debug: clique and an random generator tree path. Working ?
 #
-# @Todo: frontend: use for bas class for random network:
+# @todo: frontend: use for bas class for random network:
 #   * integration of measure on degree, goodness of fit etc
 #   * deal with the fact taht there no loading scheme here...
+#
+#
+# @purge: model/lda
 #
 #
 
