--- a/src/TODO
+++ b/src/TODO
@@ -5,16 +5,17 @@
 #
 # use args...https://github.com/kennethreitz/args instead parser for fit.py
 #
-# @debug: clique and an random generator tree path. Working ?
+# @debug: clique and random generator tree path. Working ?
 #
-# @todo: frontend: use for bas class for random network:
+# @todo: 
+#   * frontend: use for bas class for random network:
 #   * integration of measure on degree, goodness of fit etc
 #   * deal with the fact taht there no loading scheme here...
-#   * OBJECT ! change frontendNetwork to Graph(Object), it is cleat ! (implement morphism in Object for example. (issue42)
+#   * OBJECT ! change frontendNetwork to Graph(Object), it is clear ?! (implement morphism in Object for example. (issue42)
 #
-#
-# @purge: model/lda
-#
+# @purge: 
+#   * model/lda
+#   * clean and homogeneize, the communities analysis framework. There is redoncdancy, and non consistent call to modularity...
 #
 
 ### Propriété:
